Fixed shapeshift layout. Now we have 4 columns in the dashboard. Widgets must declare its own size (in columns). Also fixes the navigation. Closes #96.

--- a/src/geoffrey/web/assets/css/geoffrey.css
+++ b/src/geoffrey/web/assets/css/geoffrey.css
@@ -4,10 +4,15 @@
 }
 
 #dashboard{
-	position:relative;
+    position: relative;
+    width: 100%;
 }
+
 #dashboard>div{
-	width:45%;
-	position:absolute;
-	margin-right:5%;
+    position: absolute; 
 }
+
+#dashboard div[data-ss-colspan="1"] { width: 25%; }
+#dashboard div[data-ss-colspan="2"] { width: 50%; }
+#dashboard div[data-ss-colspan="3"] { width: 75%; }
+#dashboard div[data-ss-colspan="4"] { width: 100%; }
